[tool.poetry]
name = "firedantic"
version = "0.2.8"
description = "Pydantic base models for Firestore"
authors = ["Digital Living International Ltd"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ioxiocom/firedantic"
packages = [
    {include="firedantic", from="."}
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = "^1.9.1"
grpcio = "^1.47.0"
google-cloud-firestore = "^2.6.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
invoke = "^1.7.1"
mypy = "^0.971"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pydevd-pycharm = "^222.3345.131"
pytest-asyncio = "^0.19.0"
black = "^22.6.0"
watchdog = "^2.1.9"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
