[tool.poetry]
name = "firedantic"
version = "0.10.0"
description = "Pydantic base models for Firestore"
authors = ["IOXIO Ltd"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ioxiocom/firedantic"
packages = [
    {include="firedantic", from="."}
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.10.6"
grpcio = "^1.70.0"
google-cloud-firestore = "^2.20.0"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
invoke = "^2.2.0"
mypy = "^1.15.0"
flake8 = "^7.1.2"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
black = "^25.1.0"
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
